Cards Fixes
Card fixes with content overflowing when testing responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@
     max-height: 200px;
     transition: ease .1s;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    min-width:250px
 }
 
 .hostings_card_img {
@@ -284,6 +285,7 @@
 
     display: flex;
     flex-direction: row;
+    min-width: 350px;
 }
 
 .hostings_popular_card:hover {
